finish consumables service implementation